--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # client/.env
 
 # الرابط المستخدم في بيئة التطوير
-VITE_BACKEND_URL_DEV=http://localhost:5000
+# VITE_API_BASE_URL=http://localhost:5000
 
 # الرابط المستخدم في بيئة الإنتاج (Vercel)
-VITE_BACKEND_URL_PROD=https://khamsatessam-production-9ef9.up.railway.app
+# VITE_BACKEND_URL_PROD=https://khamsatessam-production-9ef9.up.railway.app
