--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
     "react-image-gallery": "^1.4.0",
+    "react-player": "^3.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0"
   },
