--- a/.env
+++ b/.env
@@ -1,7 +1,4 @@
 # client/.env
 
-# الرابط المستخدم في بيئة التطوير
-# VITE_API_BASE_URL=http://localhost:5000
-
-# الرابط المستخدم في بيئة الإنتاج (Vercel)
-# VITE_BACKEND_URL_PROD=https://khamsatessam-production-9ef9.up.railway.app
+# متغير جديد لرابط الخادم في بيئة الإنتاج
+VITE_BACKEND_URL_PROD=https://khamsatessam-production-9ef9.up.railway.app
